--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,31 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SafeZone">
+        android:theme="@style/Theme.SafeZone"
+        tools:ignore="ExtraText">
+
+
         <activity
-            android:name=".view.MainActivity"
+            android:name=".view.auth.LoginActivity"
             android:exported="true">
+            android:theme="@style/Theme.SafeZone.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Main Activity -->
+        <activity
+            android:name=".view.MainActivity"
+            android:exported="false" />
+
+        <!-- Admin Main Activity -->
+        <activity
+            android:name=".view.admin.AdminMainActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
