--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,12 @@
             android:name=".view.MainActivity"
             android:exported="false" />
 
+        <!-- Register Auction Activity -->
+        <activity
+            android:name=".view.RegisterAuctionActivity"
+            android:exported="false"
+            android:theme="@style/Theme.SafeZone" />
+
         <!-- Admin Main Activity -->
         <activity
             android:name=".view.admin.AdminMainActivity"
