--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+    buildFeatures {
+        dataBinding true
+    }
 }
 
 dependencies {
@@ -62,4 +65,10 @@ dependencies {
     /// zalo pay
     implementation("com.squareup.okhttp3:okhttp:4.6.0")
     implementation("commons-codec:commons-codec:1.14")
+
+    //chat
+    implementation 'com.github.ZEGOCLOUD:zego_inapp_chat_uikit_android:+'
+    
+    // ZEGOCLOUD dependencies - fix crash
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
