--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,6 @@ android {
 }
 
 dependencies {
-
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
@@ -45,30 +44,31 @@ dependencies {
     androidTestImplementation libs.espresso.core
     annotationProcessor libs.room.compiler
 
-    implementation "androidx.room:room-runtime:2.5.0"
-    annotationProcessor "androidx.room:room-compiler:2.5.0"
+    // Room dependencies
+    implementation "androidx.room:room-runtime:2.7.2"
+    annotationProcessor "androidx.room:room-compiler:2.7.2"
+    implementation "androidx.room:room-rxjava2:2.7.2"
+    implementation "androidx.room:room-rxjava3:2.7.2"
+    implementation "androidx.room:room-guava:2.7.2"
+    testImplementation "androidx.room:room-testing:2.7.2"
+    implementation "androidx.room:room-paging:2.7.2"
 
-    implementation "androidx.lifecycle:lifecycle-viewmodel:2.6.2"
-    implementation "androidx.lifecycle:lifecycle-livedata:2.6.2"
+    // Lifecycle dependencies
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.7.0"
+    implementation "androidx.lifecycle:lifecycle-livedata:2.7.0"
+    implementation "androidx.fragment:fragment:1.6.2"
 
-    implementation "androidx.room:room-rxjava2:2.5.0"
-
-    implementation "androidx.room:room-rxjava3:2.5.0"
-
-    implementation "androidx.room:room-guava:2.5.0"
-
-    testImplementation "androidx.room:room-testing:2.5.0"
-
-    implementation "androidx.room:room-paging:2.5.0"
-
-
-    /// zalo pay
-    implementation("com.squareup.okhttp3:okhttp:4.6.0")
+    // ZaloPay dependencies
+    implementation("com.squareup.okhttp3:okhttp:4.12.0")
     implementation("commons-codec:commons-codec:1.14")
 
-    //chat
+    // ZEGOCLOUD dependencies
     implementation 'com.github.ZEGOCLOUD:zego_inapp_chat_uikit_android:+'
-    
-    // ZEGOCLOUD dependencies - fix crash
+    implementation 'com.github.ZEGOCLOUD:zego_uikit_prebuilt_live_streaming_android:+'
     implementation 'com.google.code.gson:gson:2.10.1'
+
+    // Image loading library
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 }
