--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,16 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    
+    <!-- Live Streaming Permissions -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -68,6 +76,81 @@
         <service
             android:name=".service.ChatNotificationService"
             android:exported="false" />
+
+        <!-- Live Streaming Activities -->
+        <activity
+            android:name=".view.livestreaming.LiveStreamingActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.SafeZone.NoActionBar" />
+
+        <activity
+            android:name=".view.livestreaming.LiveStreamingDemoActivity"
+            android:exported="false"
+            android:label="Live Streaming Demo"
+            android:theme="@style/Theme.SafeZone" />
+
+        <activity
+            android:name=".view.livestreaming.JoinStreamActivity"
+            android:exported="false"
+            android:label="Join Live Stream"
+            android:theme="@style/Theme.SafeZone" />
+
+        <!-- Live Streaming Main Activity -->
+        <activity
+            android:name=".view.livestreaming.LiveStreamingMainActivity"
+            android:exported="false"
+            android:label="Live Streaming"
+            android:theme="@style/Theme.SafeZone" />
+
+        <!-- Product Detail Activity -->
+        <activity
+            android:name=".view.ProductDetailActivity"
+            android:exported="false"
+            android:label="Chi tiết sản phẩm"
+            android:theme="@style/Theme.SafeZone" />
+
+        <!-- Edit Product Activity -->
+        <activity
+            android:name=".view.EditProductActivity"
+            android:exported="false"
+            android:label="Chỉnh sửa sản phẩm"
+            android:theme="@style/Theme.SafeZone" />
+
+        <!-- Buy Product Activity -->
+        <activity
+            android:name=".view.BuyProductActivity"
+            android:exported="false"
+            android:label="Mua sản phẩm"
+            android:theme="@style/Theme.SafeZone" />
+
+        <!-- Purchase History Activity -->
+        <activity
+            android:name=".view.PurchaseHistoryActivity"
+            android:exported="false"
+            android:label="Lịch sử mua hàng"
+            android:theme="@style/Theme.SafeZone" />
+
+        <!-- Order Detail Activity -->
+        <activity
+            android:name=".view.OrderDetailActivity"
+            android:exported="false"
+            android:label="Chi tiết đơn hàng"
+            android:theme="@style/Theme.SafeZone" />
+            
+        <!-- Sales History Activity -->
+        <activity
+            android:name=".view.SalesHistoryActivity"
+            android:exported="false"
+            android:label="Lịch sử bán hàng"
+            android:theme="@style/Theme.SafeZone" />
+            
+        <!-- Report Management Activity -->
+        <activity
+            android:name=".view.admin.ReportManagementActivity"
+            android:exported="false"
+            android:label="Quản lý báo cáo"
+            android:theme="@style/Theme.SafeZone" />
 
     </application>
 
